# gelatyx

./: .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  justfile
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yaml  release.yaml
configs/: cliff.toml
docs/dev/: README.md  demo.sh  releasing.md
scripts/: compress-assets.sh  prepare-assets.sh
src/: app.rs  cli.rs  config.rs  controller.rs  error.rs  exit_codes.rs  fmt.rs  lib.rs  main.rs  output.rs  util.rs
src/fmt/: lua.rs  mod.rs
tests/: integration.rs
tests/e2e/wezterm/: stylua.toml  test.sh
tests/fixtures/: multi_blocks.md  nocode.md  one.md  oneline.md  second.md  test.md
