[package]
name = "gelatyx"
version = "0.2.1"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "formatter"]
license = "MIT"
repository = "https://github.com/azzamsa/gelatyx"
description = "Format code blocks inside the docs"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# formatter
full_moon = "0.17.0"
stylua = { version = "0.17.0" }

# cli
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

# error
miette = { version = "5.5", features = ["fancy"] }
thiserror = "1.0"

regex = "1.7"
toml = "0.7.2"

[dependencies.clap]
version = "4.1.8"
features = ["suggestions", "color", "cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"

cargo-husky = { version = "1", features = ["user-hooks"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
