[package]
name = "gelatyx"
version = "0.3.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2021"
exclude = ["/README.md"]
keywords = ["cli", "formatter"]
license = "MIT"
repository = "https://github.com/azzamsa/gelatyx"
rust-version = "1.77.1"
description = "Format code blocks inside the docs"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# formatter
full_moon = "0.19.0"
stylua = { version = "0.19.1" }

# cli
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

# error
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"

regex = "1.10"
toml = "0.8.8"

[dependencies.clap]
version = "4.4.11"
features = ["suggestions", "color", "cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0.4"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
