[package]
name = "gelatyx"
version = "0.3.0"
authors = ["azzamsa <vcs@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2024"
exclude = ["/README.md"]
keywords = ["cli", "formatter"]
license = "MIT"
repository = "https://github.com/azzamsa/gelatyx"
rust-version = "1.87.0"
description = "Format code blocks inside the docs"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
# formatter
full_moon = "2.0.0"
stylua = { version = "2.1.0" }

# cli
owo-colors = { version = "4.2.1", features = ["supports-colors"] }

# error
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

regex = "1.11"
toml = "0.8.23"

[dependencies.clap]
version = "4.5.40"
features = ["suggestions", "color", "cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
